--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                 <h3>Aung San Suu Kyi</h3>
                 <p>Criminal and Nobel Peace Prize winner Aung San Suu Kyi is still alive, but serving out her life sentence for crimes against the Junta in Burma. She would no-doubt be glad to know about the ways criminals have been using bitcoin to subvert the Junta in her country.</p>
             </div>
+            <div class="history-item">
+                <h3>Harriet Tubman</h3>
+                <p>If you've ever studied anything about American history, this one is basically a "duh" situation.</p>
+            </div>
         </div>
     </section>
 
