--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Bitcoin is for <a href="https://stacker.news/jasonb" target="_blank"> Criminals</a>. All rights reserved.</p>
+            <p>&copy; 2025 Bitcoin is for <a class="me" href="https://stacker.news/jasonb" target="_blank"> Criminals</a>. All rights reserved.</p>
         </div>
     </footer>
 </body>
