--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h1>BE ALERT</h1>
             <p>The following case studies are real life examples of the ways criminals have used bitcoin across the globe.</p>
-            <p>As a warning, you may find some of the illicit activicy descrimed below alarming.</p>
+            <p>As a warning, you may find some of the illicit activicy described below alarming.</p>
             <p>Proceed with caution.</p>
         </div>
     </section>
