--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <h2>About Bitcoin</h2>
             <p>The Bitcoin network is the world's largest and most secure computer network. 100% of global Bitcoin node operators are unregulated. As a result, no single government, bank, or corporation can control it.</p>
-            <p>Furthermore, the network's native token, bitcoin, is entirely permissionless. It is impossible to stop criminals from using it because of the aformentioned decentralized network. While most "bitcoiners" use this native token as an alternative money, due to it's limited supply and savings value, many use it for illicit purposes.</p>
+            <p>Furthermore, the network's native token, bitcoin, is entirely permissionless. It is impossible to stop criminals from using it because of the aformentioned decentralized network. While most "bitcoiners" use this native token as an alternative money, due to its limited supply and savings value, many use it for illicit purposes.</p>
             <p>We are hard at work highlighting high profile, international cases so the public is aware of the many ways criminals use this network.</p>
         </div>
     </section>
@@ -167,7 +167,7 @@
             </div>
             <div class="history-item">
                 <h3>Aung San Suu Kyi</h3>
-                <p>Criminal and Nobel Peace Prize winner Aung San Suu Kyi is still alive, but serving out her life sentence for crimes against the Junta in Burma. She would no-doubt be glad to know about the ways criminals have been using bitcoin to subvert the Junta in her country.</p>
+                <p>Criminal and Nobel Peace Prize winner Aung San Suu Kyi is still alive, but serving out her life sentence for crimes against the Junta in Burma. She would, no doubt, be glad to know about the ways criminals have been using bitcoin to subvert the Junta in her country.</p>
             </div>
             <div class="history-item">
                 <h3>Harriet Tubman</h3>
