--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
                 <p>Criminal and Nobel Peace Prize winner Aung San Suu Kyi is still alive, but serving out her life sentence for crimes against the Junta in Burma. She would, no doubt, be glad to know about the ways criminals have been using bitcoin to subvert the Junta in her country.</p>
             </div>
             <div class="history-item">
+                <h3>Oskar Schindler</h3>
+                <p>Oskar Schindler illegally smuggled many people out areas where they would have been sent to Nazi death camps. Dad bitcoin been around, he clearly would have illegally helped them preserve their life savings as well, like many of the contemporary criminals listed on this site do.</p>
+            </div>
+            <div class="history-item">
                 <h3>Harriet Tubman</h3>
                 <p>If you've ever studied anything about American history, this one is basically a "duh" situation.</p>
             </div>
