--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="history-item">
                 <h3>Oskar Schindler</h3>
-                <p>Oskar Schindler illegally smuggled many people out areas where they would have been sent to Nazi death camps. Dad bitcoin been around, he clearly would have illegally helped them preserve their life savings as well, like many of the contemporary criminals listed on this site do.</p>
+                <p>Oskar Schindler illegally smuggled many people out areas where they would have been sent to Nazi death camps. Had bitcoin been around, he clearly would have illegally helped them preserve their life savings as well, like many of the contemporary criminals listed on this site do.</p>
             </div>
             <div class="history-item">
                 <h3>Harriet Tubman</h3>
