--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section id="countries">
         <div class="container">
             <h2>Countries Where Bitcoin is Illegal</h2>
-            <p>The following is a list of countries in which bitcoin is illegal for any purposes. Interestingly, this list is almost a mirror list of the countries in which bitcoin adoption is growing the fastest. One might look to these nations as the most progressive if bitcoin is bad genuinely for society.</p>
+            <p>The following is a list of countries in which bitcoin is illegal for any purposes. Interestingly, this list is almost a mirror list of the countries in which bitcoin adoption is growing the fastest. One might look to these nations as the most progressive if bitcoin is genuinely bad for society.</p>
             <div class="countries-item">
                 <h3>China</h3>
             </div>
